<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/itemBackground">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:src="@drawable/text"
            android:background="@color/itemBackground"/>


    </RelativeLayout>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/name"
        android:gravity="center_vertical"
        style="@style/self_view_style"
        android:textColor="@color/textColor"
        android:layout_gravity="center_vertical"
        android:paddingLeft="8dp"
        android:background="@drawable/self_item_round"
        />
<EditText
    style="@style/self_edit_style"
    android:layout_marginTop="10dp"
    android:background="@color/itemBackground"
    android:paddingLeft="8dp"
    android:id="@+id/nick_name"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"

    />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/sex"
        android:gravity="center_vertical"
        style="@style/self_view_style"
        android:textColor="@color/textColor"
        android:paddingLeft="8dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/self_item_round"
        />
    <TextView
        android:id="@+id/sex"
        style="@style/self_edit_style"
        android:layout_marginTop="10dp"
        android:background="@color/itemBackground"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"

        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"

        />
    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/age"
        android:gravity="center_vertical"
        style="@style/self_view_style"
        android:textColor="@color/textColor"
        android:paddingLeft="8dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/self_item_round"
        />
    <EditText
        style="@style/self_edit_style"
        android:layout_marginTop="10dp"
        android:background="@color/itemBackground"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:id="@+id/age"
        android:numeric="integer"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"

        />
    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/e_mail"
        android:gravity="center_vertical"
        style="@style/self_view_style"
        android:textColor="@color/textColor"
        android:paddingLeft="8dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/self_item_round"
        />
    <EditText
        style="@style/self_edit_style"
        android:layout_marginTop="10dp"
        android:background="@color/itemBackground"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:id="@+id/e_mail"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"

        />

</LinearLayout>
</ScrollView>
</layout>